unpackaged/main/default/objects/Opportunity/fields/golden_chance__c.field-meta.xml
<CustomField>
    <fullName>golden_chance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>golden chance</label>
    <type>Checkbox</type>
</CustomField>