unpackaged/main/default/objects/Opportunity/fields/NewCustomField__c.field-meta.xml
<CustomField>
    <fullName>NewCustomField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NewCustomField</label>
    <type>Checkbox</type>
</CustomField>