unpackaged/main/default/objects/Opportunity/fields/NewCustomFieldLookUpAccount__c.field-meta.xml
<CustomField>
    <fullName>NewCustomFieldLookUpAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NewCustomFieldLookUpAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>