unpackaged/main/default/objects/Opportunity/fields/NewNumberFieldV3__c.field-meta.xml
<CustomField>
    <fullName>NewNumberFieldV3__c</fullName>
    <label>NewNumberFieldV3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>