unpackaged/main/default/objects/Opportunity/listViews/list_view_with_custom_fields.listView-meta.xml
<ListView>
    <fullName>list_view_with_custom_fields</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>golden_chance__c</columns>
    <filterScope>Mine</filterScope>
    <label>list view with custom fields</label>
</ListView>