unpackaged/main/default/objects/Opportunity/listViews/New_ListView_Without_Custom_Fields.listView-meta.xml
<ListView>
    <fullName>New_ListView_Without_Custom_Fields</fullName>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>New ListView Without Custom Fields</label>
</ListView>